hphp/hack/test/typecheck/function_pointer/class_meth_fcfp_abstract.php
<?hh

abstract class Foo {
  public abstract static function bar(): void;
}

function test(): void {
  $_ = Foo::bar<>;
}
